dashboard diamond link small mobilecontent alignment and carousel fixes

--- a/web/themes/custom/myusf/sass/src/partials/_boxes.scss
+++ b/web/themes/custom/myusf/sass/src/partials/_boxes.scss
@@ -577,6 +577,13 @@ h2.carousel-overlay:before {
     margin-right: 0.9375rem;
     margin-bottom: 2.5rem;
     width: 100%;
+
+    @include media-breakpoint-only(tablet) { 
+        margin-left: 0.9375rem;
+    }
+    @include media-breakpoint-down(phone) { 
+        margin-left: 0.3125rem;
+    }
 } 
 
 .carousel-inner2 {
