--- a/web/themes/custom/myusf/sass/src/partials/_dashboard.scss
+++ b/web/themes/custom/myusf/sass/src/partials/_dashboard.scss
@@ -22,7 +22,7 @@
 	.appsLinks {
 		margin-left: 0;
    		margin-right: 0;
-   		margin-bottom: 1.25rem;
+   		margin-bottom: 2.1875rem;
 		background: transparentize($light_beige, .5);
 		height:560px;
 
@@ -406,7 +406,7 @@
 						margin-left: 0.125rem;
 
 						@include media-breakpoint-down(tablet) {
-					    	top: -40px;
+					    	top: -30px;
 					    }
 					    @include media-breakpoint-down(phone) {
 					    	top: 10px;
@@ -652,7 +652,7 @@
 			width: 66%;
 
 			@include media-breakpoint-down(tablet) {
-		    	top: 400px;
+		    	top: 420px;
 		    }
 		    @include media-breakpoint-down(phone) {
 		    	top: 665px;
@@ -973,6 +973,11 @@ aside.section div:first-child {
     	padding: 0;
 	}
 
+.row.usf_dash {
+	@include media-breakpoint-down(phone) {
+    	margin-left: -0.9375rem;
+    }
+}
 /*  My Apps Preferences page
 ===================================================*/ 
 
@@ -1307,7 +1312,7 @@ div.view-quick-links.view-id-quick_links {
 .usf_dash {
 	.eventsLink {
 		display:block;
-		margin-top: 1.25rem;
+		margin-top: -.75rem;
 
 		.views-element-container {
 			display: inline;
