--- a/web/themes/custom/myusf/sass/src/partials/_mixins.scss
+++ b/web/themes/custom/myusf/sass/src/partials/_mixins.scss
@@ -86,7 +86,7 @@
         content: "";
         width: 6px;
         height: 10px;
-        top: 14px;
+        top: 10px;
         right: 15px;
         z-index: 1;
         background: url(/themes/custom/myusf/images/site/icons.png) $bgX $bgY no-repeat;
@@ -99,7 +99,7 @@
         content: "";
         width: 20px;
         height: 20px;
-        top: 8px;
+        top: 4px;
         right: 10px;
         -ms-transform: rotate($degree);
         transform: rotate($degree);
