--- a/web/themes/custom/myusf/sass/src/partials/_navigation.scss
+++ b/web/themes/custom/myusf/sass/src/partials/_navigation.scss
@@ -1245,6 +1245,7 @@ button.navbar-toggler.navbar-toggler-right.collapsed{
 #sidebar_second {
 	@include media-breakpoint-only(tablet) {   
 		width: 29.4%;
+		margin-left: -0.25rem;
 	}
 	@include media-breakpoint-down(landscape_phone) {
 		margin-top: 1.875rem
